--- a/face/build.gradle
+++ b/face/build.gradle
@@ -26,12 +26,20 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
+
+    implementation 'com.blankj:utilcodex:1.26.0'
+    implementation 'com.orhanobut:logger:2.2.0'
+    implementation 'org.jetbrains:annotations:15.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
