--- a/IDCard/src/main/AndroidManifest.xml
+++ b/IDCard/src/main/AndroidManifest.xml
@@ -2,4 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ant.idcard">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <application>
+
+        <activity
+            android:name="com.ant.idcard.IDCardRecognitionActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait" />
+    </application>
 </manifest>
